<resources>

    <string name="app_name">WeatherReport</string>
    <string name="cityName_hint">Enter City Name</string>
    <string name="cityName_txt">City Name :</string>
    <string name="userName_txt">UserName</string>
    <string name="userName_hint">E mail</string>
    <string name="passWord_txt">Password</string>
    <string name="forgot_txt">Forgot password ?</string>
    <string name="login_txt">Log in</string>
    <string name="passWord_hint">Password</string>
    <string name="enter_txt">Click To View Details</string>
    <string name="title_txt">Paradigm Creatives Cloud</string>
    <string name="welcome_txt">Log in To Paradigm Creatives</string>
    

</resources>
